--- a/app/src/main/res/layout/view_article.xml
+++ b/app/src/main/res/layout/view_article.xml
@@ -8,16 +8,16 @@
 
     <ImageView
         android:id="@+id/profile_image_view"
-        android:layout_centerVertical="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_centerVertical="true"
         tools:background="#f00" />
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_marginStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/profile_image_view"
         android:ellipsize="end"
         android:maxLines="2"
@@ -34,8 +34,7 @@
         android:layout_marginTop="8dp"
         tools:text="user" />
 
-</RelativeLayout>
-<!--
+</RelativeLayout><!--
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
